Bug 504621 - "Broken Global Theme" warning incorrectly appearing when selecting active theme
Summary: "Broken Global Theme" warning incorrectly appearing when selecting active theme
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_lookandfeel (other bugs)
Version First Reported In: 6.3.90
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 479921 502738 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-21 15:42 UTC by Tamás Králl
Modified: 2025-06-09 20:19 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
The warning (135.17 KB, image/png)
2025-05-21 15:42 UTC, Tamás Králl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Králl 2025-05-21 15:42:22 UTC
Created attachment 181616 [details]
The warning

SUMMARY
The following warning comes up in two scenarios where it shouldn't:
"This Global Theme does not provide any applicable settings. Please contact the maintainer of this Global Theme as it might be broken.

STEPS TO REPRODUCE
Scenario 1:
1. Apply Breeze or Breeze Dark on the Quick Settings page
2. Go to Colors & Themes > Global Theme
3. Click on the theme you applied in step 1.

Scenario 2.
1. Apply a Global Theme on the Colors & Themes > Global Theme page
2. Change any theme component e.g. Colors, Cursors, Icons etc.
3. Go back to Colors & Themes > Global Theme
4. Click on the theme you applied in step 1.

OBSERVED RESULT
The dialog that comes up isn't the usual dialog, but one where there's a false warning about the theme being broken.

EXPECTED RESULT
The usual dialog comes up.

SOFTWARE/OS VERSIONS
System Settings: 6.3.90
KDE Frameworks: 6.15.0
Qt: Using 6.9.0 and built against 6.9.0
KDE neon Unstable Edition (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.11.0-26-generic
Comment 1 Bug Janitor Service 2025-05-21 17:27:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5507
Comment 2 Tamás Králl 2025-05-21 17:54:04 UTC
I don't think the merge request (based in the merge request description) should fix this behaviour.
In Scenario 1, the Quick Settings global theme doesn't contain the "Desktop and window layout", only the visuals. So the user may want to apply the same theme again to also use the "Desktop and window layout" provided by it.

In Scenario 2, one of the currently selected theme components is not the same as the one provided by the currently selected Global Theme. So the user may want to reapply the Global Theme to go back to the theme components provided by it.
Comment 3 Nate Graham 2025-05-21 18:19:37 UTC
I can see that, but the concept of re-applying what's already applied — and indicated visually as such in the UI — strikes me as unintuitive and odd, which is why I went for the approach I did in that merge request.
Comment 4 Tamás Králl 2025-05-21 18:31:04 UTC
So this merge request will basically not allow do user to encounter this bug? I guess that's a solution :)

Also, how do you find out so quickly when bugs are duplicates of others? Sometimes I do a search and also pay attention to the auto-suggested similar bugs and still miss that my issue had already been reported.
Comment 5 Nate Graham 2025-05-21 21:15:36 UTC
8 years of triaging KDE bugs on and off (and 5 of doing it pretty intensively), so I have a mental map of what I've seen before.

If I can't recall it exactly, then if I've seen it before, it's in my browser history, so I can usually find it by searching for some relevant keywords.
Comment 6 Marco Martin 2025-05-22 08:32:24 UTC
i somehow can't reproduce the error dialog, if i change for instance just the colors and then re-apply the global theme i already have and will correctly reset the colors to default, with no error dialog appearing
Comment 7 John Kizer 2025-05-26 07:11:32 UTC
*** Bug 479921 has been marked as a duplicate of this bug. ***
Comment 8 John Kizer 2025-05-26 07:11:55 UTC
*** Bug 502738 has been marked as a duplicate of this bug. ***
Comment 9 David Edmundson 2025-05-26 07:24:31 UTC
>i somehow can't reproduce the error dialog, if i change for instance just the colors and then re-apply the global theme i already have and will correctly reset the colors to default, with no error dialog appearing

I can.

If I click on my active lnf theme first I get the warning
If I click on a random lnf theme, get a prompt - and then select the original, I do not get a warning.
Comment 10 Bug Janitor Service 2025-05-26 08:58:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5524
Comment 11 Nate Graham 2025-05-28 14:36:50 UTC
Git commit 8c74fe5206f1e1a7e3bc13622923b2a0da9c9593 by Nate Graham, on behalf of David Edmundson.
Committed on 28/05/2025 at 14:36.
Pushed by ngraham into branch 'master'.

kcms/lookandfeel: Initialise member variables

We have various member variables reflecting the support of the currently
selected lnf theme. This updates if selection changes, but not on
startup.

The user-facing impact of this is applying the initially selected lnf
gives a warning about this lnf not supporting layouts or contents.

M  +5    -2    kcms/lookandfeel/kcm.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8c74fe5206f1e1a7e3bc13622923b2a0da9c9593
Comment 12 David Edmundson 2025-05-29 10:19:26 UTC
Git commit 0c487ef393624e4760474bf946b03390b920f775 by David Edmundson, on behalf of Nate Graham.
Committed on 29/05/2025 at 10:19.
Pushed by davidedmundson into branch 'Plasma/6.4'.

kcms/lookandfeel: Initialise member variables

We have various member variables reflecting the support of the currently
selected lnf theme. This updates if selection changes, but not on
startup.

The user-facing impact of this is applying the initially selected lnf
gives a warning about this lnf not supporting layouts or contents.


(cherry picked from commit 8c74fe5206f1e1a7e3bc13622923b2a0da9c9593)

f8b27a97 kcms/lookandfeel: Initialise initial member variables

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +5    -2    kcms/lookandfeel/kcm.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0c487ef393624e4760474bf946b03390b920f775