kcms/lookandfeel: Initialise member variables

We have various member variables reflecting the support of the currently
selected lnf theme. This updates if selection changes, but not on
startup.

The user-facing impact of this is applying the initially selected lnf
gives a warning about this lnf not supporting layouts or contents.

BUG: 504621